--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,21 @@
 {
-    "name": "aurooba/cpt",
+    "name": "gin0115/cpt",
     "description": "A small helper class for registering Custom Post Types and their taxonomies in WordPress",
-	"keywords": [
-		"wordpress"
-	],
+    "keywords": [
+        "wordpress"
+    ],
     "type": "library",
     "license": "GPL-2.0-or-later",
-    "authors": [
-        {
-            "name": "Aurooba Ahmed",
-            "email": "hey@aurooba.com",
-			"homepage": "https://aurooba.com"
-        }
-    ],
+    "authors": [{
+        "name": "Aurooba Ahmed",
+        "email": "hey@aurooba.com",
+        "homepage": "https://aurooba.com"
+    }],
     "minimum-stability": "stable",
     "require": {
-		"php": ">=7.0.0"
-	},
-	"autoload": {
+        "php": ">=7.0.0"
+    },
+    "autoload": {
         "psr-4": {
             "Aurooba\\": "src"
         }
